# cfdi-saas

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  README.md  docker-compose.prod.yml  docker-compose.ym  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  deploy.yml
crates/ai/: Cargo.toml
crates/api/: Cargo.toml
crates/api/src/: error.rs  main.rs  state.rs
crates/api/src/handlers/: cfdi.rs  health.rs  mod.rs
crates/api/src/middleware/: auth.rs  mod.rs
crates/api/src/routes/: mod.rs
crates/cfdi-core/: Cargo.toml
crates/cfdi-core/src/: error.rs  lib.rs
crates/cfdi-core/src/crypto/: mod.rs  sello.rs
crates/cfdi-core/src/models/: carta_porte.rs  cfdi.rs  concepto.rs  emisor.rs  mod.rs  receptor.rs
crates/cfdi-core/src/xml/: generador.rs  mod.rs
crates/config/: Cargo.toml
crates/db/: Cargo.toml
crates/db/migrations/: 001_extensiones.sql  002_emisores.sql  003_cfdis.sql  004_carta_porte.sql  005_catalogos_sat.sql
crates/db/src/: error.rs  lib.rs  pool.rs
crates/db/src/repositories/: cfdi.rs  emisor.rs  mod.rs
crates/jobs/: Cargo.toml
docker/nginx/: nginx.conf
docker/postgres/: init.sql
k8s/: configmap.yaml  namespace.yaml  secret.yaml
k8s/api/: deployment.yaml  hpa.yaml  service.yaml
k8s/ingress/: ingress.yaml
k8s/monitoring/: alerts.yaml
k8s/postgres/: deployment.yaml  pvc.yaml  service.yaml
k8s/redis/: deployment.yaml  service.yaml
