# File: Cargo.toml
[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/cfdi-core",
    "crates/ai",
    "crates/db",
    "crates/jobs",
    "crates/config",
]

[workspace.dependencies]
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
axum       = { version = "0.8", features = ["macros"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "rust_decimal"] }
reqwest    = { version = "0.12", features = ["json", "stream"] }
tracing    = "0.1"
uuid       = { version = "1", features = ["v4", "serde"] }
chrono     = { version = "0.4", features = ["serde"] }
thiserror  = "2"
anyhow     = "1"
dotenvy    = "0.15"