[package]
name = "cfdi-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cfdi-api"
path = "src/main.rs"

[dependencies]
tokio           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
anyhow          = { workspace = true }
thiserror       = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
dotenvy         = { workspace = true }
tracing         = { workspace = true }
axum            = { version = "0.8", features = ["macros"] }
tower           = "0.5"
tower-http      = { version = "0.6", features = ["cors", "trace"] }
axum-extra      = { version = "0.10", features = ["typed-header"] }
jsonwebtoken    = "9"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
cfdi-core       = { path = "../cfdi-core" }