# File: crates/db/Cargo.toml
[package]
name = "cfdi-db"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
tracing    = { workspace = true }
sqlx       = { workspace = true }